adjuested padding  Fixed issue with smartphone spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 
 body {
 	font-family: "Helvetica Neue";
-    padding-left: 15px;
+    padding-left: 40px;
     padding-right: 8px;
     letter-spacing: 1px;
     color: #d9dadb;
@@ -23,10 +23,12 @@ body {
     color: blueviolet;
 }*/
 
-.card-title {
-    text-align: center;
-}
-
+.card-title-container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
 .projectVideo {
 	border-spacing: 4px;
@@ -81,6 +83,7 @@ body {
 .card-title {
     padding-right: 2rem;
     padding-bottom: 3rem;
+    
 }
 
 
